# chat

./: .gitignore  README.md
api/: .env.example  .pdm-python  app.db  docker-compose.yaml  pyproject.toml
api/src/: app.py  connection_manager.py  routes.py
api/src/config/: env.py
api/src/infra/database/: database.py  models.py
api/src/routers/: chat.py  health.py  users.py
api/src/schemas/: chat.py  message.py  users.py
api/src/services/: chat.py  message.py  users.py
api/src/websockets/: chat.py
api/src/websockets/utils/: handle_ack.py  manager.py
client/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: app.tsx  routeTree.gen.ts
client/src/components/: chat-empty.tsx  form-message.tsx  message-status.tsx  message.tsx
client/src/components/ui/: button.tsx
client/src/hooks/: store.ts  usePageVisibility.tsx
client/src/http/chats/: create.ts  join-member.ts  list-members-by-chat.ts  list-messages.ts  list.ts  show.ts  update.ts
client/src/http/schemas/: chats.ts  users.ts
client/src/http/users/: create.ts  list-my-chats.ts
client/src/pages/: __root.tsx  chats.tsx  index.tsx
client/src/pages/chats/: search.tsx
client/src/pages/chats/-components/: chat-empty.tsx  chat-item.tsx  chats-list.tsx  modal-create-chat.tsx  sidebar.tsx
client/src/pages/chats/_main/: index.tsx  layout.tsx
client/src/store/: chat.ts  index.ts  users.ts
client/src/store/middleware/: websocket.ts
client/src/store/slices/: chat.ts  users.ts
client/src/websockets/: index.ts
(+8 files in other folders)
