[project]
name = "chatbot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "André Junior", email = "andrejunior179@gmail.com"},
]
dependencies = ["fastapi>=0.122.0", "uvicorn>=0.38.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 3333"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
